# registry-io

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.dev/: DIRECTIVES.md  PROMPT.md  ROADMAP.md
.dev/release/: v0.1.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md
.github/workflows/: ci.yml
benches/: async_notify.rs  contention.rs  register_unregister.rs  registry_bench.rs  sync_notify.rs
docs/: API.md  ARCHITECTURE.md  PATTERNS.md  PERFORMANCE.md  PLATFORM-NOTES.md  SECURITY.md  STABILITY-1.0.md
docs/release/: v0.4.0.md  v0.5.0.md  v0.6.0.md
examples/: async_basic.rs  async_concurrent_vs_sequential.rs  basic.rs  concurrent.rs  guards.rs  panic_isolation.rs  pattern_audit_fanout.rs  pattern_hot_reload.rs  pattern_metric_event.rs  pattern_transaction_hooks.rs  priority.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: event_payload.rs  handler_churn.rs
src/: future_ext.rs  handler_id.rs  lib.rs  panic.rs
src/async_registry/: guard.rs  mod.rs
src/sync/: guard.rs  mod.rs
tests/: async_guards.rs  async_panic.rs  async_priority.rs  async_registry.rs  concurrent.rs  guards.rs  leak_check.rs  panic_isolation.rs  priority.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  smoke.rs  sync_registry.rs  zero_alloc.rs
