[package]
name = "registry-io"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0 OR MIT"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "High-performance event/callback registry for Rust. Sync-first with optional async. Lock-free reads, zero-allocation hot path, sub-50ns notify target. Designed as the foundation primitive for portfolio crates needing fast in-process notification."

keywords = [
    "registry",
    "callbacks",
    "observer",
    "events",
    "rust"
]

categories = [
    "rust-patterns",
    "concurrency",
    "asynchronous"
]

documentation = "https://docs.rs/registry-io"
repository    = "https://github.com/jamesgober/registry-io"
homepage      = "https://github.com/jamesgober/registry-io"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "registry_io"
path = "src/lib.rs"

[features]
default = ["std", "sync"]

# Core feature flags
# `std` pulls in the standard library; required for the sync and async registries.
std = []
# `sync` enables the SyncRegistry and all synchronous-side machinery (priority,
# guards, panic isolation). Implies `std`.
sync = ["std"]
# `async` enables the AsyncRegistry. Reserved for a future release (>= 0.5.0).
# Implies `std`.
async = ["std", "dep:futures-core"]
# `hybrid` activates both sync and async paths.
hybrid = ["sync", "async"]

# Optional integrations (placeholders, no code yet).
metrics = []

[dependencies]
# Lock-free atomic snapshot updates of the handler list.
arc-swap = "1.7"

# Reserved for AsyncRegistry (>= 0.5.0). Pulled in only when the `async`
# feature is enabled.
futures-core = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[[bench]]
name = "sync_notify"
harness = false

[[bench]]
name = "register_unregister"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
